# back/storage/api-docs/api-docs.json
@@ -202,6 +202,251 @@
                 }
             }
         },
+        "/assets": {
+            "get": {
+                "tags": [
+                    "Ativos"
+                ],
+                "summary": "Listar ativos",
+                "description": "Retorna uma lista paginada de ativos.",
+                "operationId": "839a40ad0082bc4601e4e5b4d7e8d3d7",
+                "parameters": [
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "default": 1
+                        }
+                    },
+                    {
+                        "name": "per_page",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "default": 10
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Lista paginada de ativos"
+                    },
+                    "500": {
+                        "description": "Ocorreu um erro inesperado ao processar sua solicitação. Tente novamente mais tarde."
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Ativos"
+                ],
+                "summary": "Cria um novo ativo",
+                "description": "Cria um novo ativo.",
+                "operationId": "ef1f9ce040e398e44a16cc8feaba324f",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "fk_store",
+                                    "fk_sector",
+                                    "fk_asset_type",
+                                    "fk_status",
+                                    "quantity"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "Notebook"
+                                    },
+                                    "fk_store": {
+                                        "type": "integer",
+                                        "example": 1
+                                    },
+                                    "fk_sector": {
+                                        "type": "integer",
+                                        "example": 1
+                                    },
+                                    "fk_asset_type": {
+                                        "type": "integer",
+                                        "example": 1
+                                    },
+                                    "fk_status": {
+                                        "type": "integer",
+                                        "example": 1
+                                    },
+                                    "observation": {
+                                        "type": "string",
+                                        "example": "Equipamento de TI"
+                                    },
+                                    "quantity": {
+                                        "type": "integer",
+                                        "example": 10
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Ativo criado com sucesso"
+                    },
+                    "422": {
+                        "description": "Erro de validação"
+                    },
+                    "500": {
+                        "description": "Ocorreu um erro inesperado ao processar sua solicitação. Tente novamente mais tarde."
+                    }
+                }
+            }
+        },
+        "/assets/{asset}": {
+            "get": {
+                "tags": [
+                    "Ativos"
+                ],
+                "summary": "Exibe um ativo",
+                "description": "Retorna os dados de um ativo pelo ID.",
+                "operationId": "a0ceee6775cf3fad6b1a5a9d7083ee30",
+                "parameters": [
+                    {
+                        "name": "asset",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Ativo encontrado"
+                    },
+                    "404": {
+                        "description": "Ativo não encontrado"
+                    },
+                    "500": {
+                        "description": "Ocorreu um erro inesperado ao processar sua solicitação. Tente novamente mais tarde."
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Ativos"
+                ],
+                "summary": "Atualiza um ativo",
+                "description": "Atualiza os dados de um ativo.",
+                "operationId": "eb648d261db8f4ac81846cc36d29833a",
+                "parameters": [
+                    {
+                        "name": "asset",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "fk_store",
+                                    "fk_sector",
+                                    "fk_asset_type",
+                                    "fk_status",
+                                    "quantity"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "Notebook"
+                                    },
+                                    "fk_store": {
+                                        "type": "integer",
+                                        "example": 1
+                                    },
+                                    "fk_sector": {
+                                        "type": "integer",
+                                        "example": 1
+                                    },
+                                    "fk_asset_type": {
+                                        "type": "integer",
+                                        "example": 1
+                                    },
+                                    "fk_status": {
+                                        "type": "integer",
+                                        "example": 1
+                                    },
+                                    "observation": {
+                                        "type": "string",
+                                        "example": "Equipamento de TI"
+                                    },
+                                    "quantity": {
+                                        "type": "integer",
+                                        "example": 10
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Ativo atualizado com sucesso"
+                    },
+                    "422": {
+                        "description": "Erro de validação"
+                    },
+                    "404": {
+                        "description": "Ativo não encontrado"
+                    },
+                    "500": {
+                        "description": "Ocorreu um erro inesperado ao processar sua solicitação. Tente novamente mais tarde."
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Ativos"
+                ],
+                "summary": "Remove um ativo",
+                "description": "Remove (soft delete) um ativo.",
+                "operationId": "333aa2d78e8263e5cdc14e632d8d4f56",
+                "parameters": [
+                    {
+                        "name": "asset",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Ativo removido com sucesso"
+                    },
+                    "404": {
+                        "description": "Ativo não encontrado"
+                    },
+                    "500": {
+                        "description": "Ocorreu um erro inesperado ao processar sua solicitação. Tente novamente mais tarde."
+                    }
+                }
+            }
+        },
         "/asset-types": {
             "get": {
                 "tags": [
@@ -3078,6 +3323,10 @@
         {
             "name": "Action",
             "description": "Gerenciamento de ações do sistema"
+        },
+        {
+            "name": "Ativos",
+            "description": "Gerenciamento de ativos de cada loja"
         },
         {
             "name": "Empresas",
